--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ DATABASE_PORT=<database_port>
 DATABASE_NAME=<database_name>
 DATABASE_URI=postgres://<database_username>:<database_password>@db:<database_port>/<database_name>
 PAYLOAD_SECRET=<payload_secret>
+NEXT_PUBLIC_PAYLOAD_URL=http://localhost:3000
