--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@payloadcms/payload-cloud": "^3.32.0",
     "@payloadcms/richtext-lexical": "^3.32.0",
     "@payloadcms/translations": "^3.32.0",
+    "@radix-ui/react-accordion": "^1.2.7",
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
