--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "15.2.4",
     "payload": "^3.32.0",
     "react": "^19.0.0",
+    "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.1.0",
     "tw-animate-css": "^1.2.5",
